Docs test Changed grunt tasks for docs

--- a/resources/demos/demo2.html
+++ b/resources/demos/demo2.html
@@ -1,10 +1,10 @@
 <html>
 <head>
     <script src="lib/jquery.js" type="text/javascript"></script>
-    <script src="../bower_components/lodash/dist/lodash.js" type="text/javascript"></script>
+    <script src="../../bower_components/lodash/dist/lodash.js" type="text/javascript"></script>
     <script src="lib/backbone.js" type="text/javascript"></script>
-    <script src="../bower_components/mutation/mutation.js" type="text/javascript"></script>
-    <script src="../advice.js" type="text/javascript"></script>
+    <script src="../../bower_components/mutation/mutation.js" type="text/javascript"></script>
+    <script src="../../advice.js" type="text/javascript"></script>
 </head>
 <body>
 <script type="text/javascript">
