--- a/resources/demos/demo2.html
+++ b/resources/demos/demo2.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-    <script src="lib/jquery.js" type="text/javascript"></script>
-    <script src="../../bower_components/lodash/dist/lodash.js" type="text/javascript"></script>
-    <script src="lib/backbone.js" type="text/javascript"></script>
-    <script src="../../bower_components/mutation/mutation.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js" type="text/javascript"></script>
     <script src="../../advice.js" type="text/javascript"></script>
 </head>
 <body>
@@ -14,7 +13,6 @@
 
     // Define our click mixin
     var clickMixin = function(options) {
-
         this.addToObj({
             events: {
                 "click": "clickHandler"
@@ -26,6 +24,7 @@
             }
         })
     };
+
     // Define our logging mixin
     var loggingMixin = function(options) {
         this.after({
@@ -42,20 +41,17 @@
             this.$el.html(this.name);
             return this;
         }
-    })
-            .mixin([clickMixin, loggingMixin]);
+    }).mixin([clickMixin, loggingMixin]);
 
     // Define the constructor for our second button type
     var Buttons2 = Backbone.View.extend({
         tagName: 'button',
-        template: 'Button 2',
         name: 'Button 2',
         render: function() {
             this.$el.html(this.name);
             return this;
         }
-    })
-            .mixin(clickMixin);
+    }).mixin(clickMixin);
 
     //Instantiate our buttons
     var btn1 = new Buttons1();
