--- a/resources/demos/demo1.html
+++ b/resources/demos/demo1.html
@@ -11,7 +11,7 @@
     <script src="../../advice.js" type="text/javascript"></script>
 </head>
 <body>
-<textarea style="width:250px;height:350px;"></textarea>
+<textarea style="width:250px;height:350px; background: transparent; color: #FFF;"></textarea>
 <script type="text/javascript">
 
     //Here's a simple example, obviously  you should never apply this
